# escope

./: .gitignore  .readthedocs.yaml  README.md  escope  escope.py  escopeloader.py  espark  espark.py  pyproject.toml
docs/: localsphinx.sh  requirements.txt
docs/source/: conf.py  escope-bin.rst  espark.rst  index.rst  library.rst  license.rst  peakx.rst  spikex.rst  units.rst
docs/source/_static/: escope.css
eg-data/: 20231030-154906.config  20231030-154906.escope  egdata.ipynb
src/: MANIFEST  escope  escope-postinst.py  espark  mkdist-2.6.bat  mkdist-2.7.bat  mkdist-3.bat  setup.py
src/escope/: __init__.py  escope  escope.py  espark.py  loader.py  peakx.py  spikex.py  units.py
src/escope/escopelib/: Struct.py  __init__.py  eschannels.py  esconfig.py  esdatasource.py  esdsnidaq.py  esdspicodaq.py  esdsxxdaq.py  eshardware.py  esnidaq.py  esparkwin.py  espchannels.py  espconfig.py  espdatasink.py  espdsnidaq.py  espdspicodaq.py  espdsxxdaq.py  espgraph.py  esphardware.py  espicodaq.py  espmgraph.py  esppulsegraph.py  espqgraph.py  espsinks.py  esptraingraph.py  esptypebox.py  espvaredit.py  esscopewin.py  estmarks.py  estrigger.py  estriggerbuffer.py  esvscalemarks.py  esvzeromarks.py  ledlabel.py  picodaq_backend.py  serializer.py
src/escope_wagenadl/: escope.py  espark.py  setup.py
src/escope_wagenadl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/escope_wagenadl/escopelib/: Struct.py  eschannels.py  esconfig.py  eshardware.py  esnidaq.py  espchannels.py  espconfig.py  espdatasink.py  esphardware.py  espmgraph.py  espsinks.py  esptypebox.py  espvaredit.py  esscopewin.py  estmarks.py  estrigger.py  esvscalemarks.py  esvzeromarks.py  serializer.py
src/escopelib/: eschannels.py  esconfig.py  esdatasource.py  esdsnidaq.py  eshardware.py  esnidaq.py  espchannels.py  espconfig.py  espdatasink.py  espdsnidaq.py  espgraph.py  esphardware.py  espmgraph.py  esppulsegraph.py  espqgraph.py  espsinks.py  esptraingraph.py  esptypebox.py  espvaredit.py  esscopewin.py  estmarks.py  estrigger.py  estriggerbuffer.py  esvscalemarks.py  esvzeromarks.py
test/: study231018.py
